merging course from brage publication to existing publication (#1524)